# svitok

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  PRIVACY.md  README.md  ROADMAP.md  SPEC.md  flake.nix  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: api.ts  i18n.ts  main.ts  scan.ts  styles.css  ui.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json  mobile.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  import.rs  ipc_server.rs  jni_autofill.rs  lib.rs  main.rs  seed.rs  seedstore.rs  winclip.rs
cli/: Cargo.toml
cli/src/: main.rs  term.rs
common/: Cargo.toml
common/src/: lib.rs  lockmem.rs  osrng.rs  qr.rs  store.rs
common/tests/: genqr.rs  qr.rs
core/: Cargo.toml
core/src/: base32.rs  blake2s.rs  chacha20.rs  derive.rs  domain.rs  kdf.rs  lib.rs  psl_data.rs  sha1.rs  totp.rs  vault.rs  wipe.rs
core/tests/: bench.rs  golden.rs
docs/: AUTOFILL.md  REPRODUCIBLE.md
extension/: README.md  background.js  content.css  content.js  manifest.json  options.html  options.js
extension/native-host/: app.svitok.host.json
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 4000.txt
fastlane/metadata/android/ru-RU/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/ru-RU/changelogs/: 4000.txt
host/: Cargo.toml
host/src/: main.rs
scripts/: gen_psl.js
