[package]
name = "svitok-app"
version = "0.1.0"
edition = "2021"
description = "Свиток — бумажный менеджер паролей"

[lib]
name = "svitok_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
svitok-core = { path = "../../core" }
svitok-common = { path = "../../common" }
tauri-plugin-clipboard-manager = "2"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"

# JNI-мост для AutofillService: он живёт вне Tauri-активити и зовёт ядро напрямую
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

# На десктопе сид держим не в файле, а в системном хранилище секретов:
# Windows Credential Manager/DPAPI, macOS Keychain, Linux kernel keyutils.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }
zeroize = "1"

[features]
# по умолчанию берём стандартный протокол, кастомный тут ни к чему
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
